--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>קישורית-מערכת ניהול דחופים</title>
     <script src="./Scripts/jquery-3.4.1.min.js"></script>
     <script src="./Scripts/jquery.signalR-2.4.2.min.js"></script>
   </head>
