--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>קישורית-מערכת ניהול דחופים</title>
-    <script src="./Scripts/jquery-3.4.1.min.js"></script>
-    <script src="./Scripts/jquery.signalR-2.4.2.min.js"></script>
+    <!-- <script src="./Scripts/jquery-3.4.1.min.js"></script>
+    <script src="./Scripts/jquery.signalR-2.4.2.min.js"></script> -->
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/signalr.js/2.4.1/jquery.signalR.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
